--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "debby"]
 	path = debby
 	url = https://github.com/alexbowe/debby.git
+[submodule "recognizer"]
+	path = recognizer
+	url = https://github.com/Kuanhao-Chao/Wheeler_Graph_Toolkit.git
